# twitter-clone

./: .gitignore  pyproject.toml
authentication/: forms.py  urls.py  views.py
notification/: models.py  urls.py  views.py
notification/migrations/: 0001_initial.py  0002_auto_20200531_2208.py  0002_auto_20200531_2248.py  0002_auto_20200531_2307.py  0002_auto_20200531_2330.py  0003_merge_20200604_2003.py
notificatiton/: apps.py  models.py
templates/: index.html  loginpage.html  notification.html  tweetdetail.html  tweets.html
tweet/: models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_twitteruser.py  0003_auto_20200601_0129.py  0004_auto_20200605_0403.py
tweet/templates/: index.html  profile.html  tweets.html
twitterclone/: settings.py  urls.py
twitteruser/: models.py  urls.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_twitteruser_twitter_following.py
